[package]
name = "basic-comm"
version = "0.1.0"
edition = "2021"

[dependencies]
false = "0.0.0"
heapless = "0.7.16"
serde = { version = "1.0", default-features = false }
serde-json-core = "0.5.1"
serial-line-ip = "0.5.0"

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
